# arc-raiders-companion-app

./: .gitignore  .rules  Cargo.toml  Dioxus.toml
.github/workflows/: android-release.yml
android/: AndroidManifest.xml
assets/: tailwind.css
assets/styling/: arc_card.css  arcs_view.css  cache_badge.css  coming_soon.css  common.css  dropdown.css  event_card.css  event_filters.css  events_view.css  filter_chips.css  item_card.css  items_view.css  main.css  navbar.css  page_layout.css  settings.css  spinner.css  toggle.css  trader_item_card.css  trader_view.css
docs/superpowers/plans/: 2026-05-22-arc-and-events-pages.md  2026-05-22-cache-diagnostic.md  2026-05-22-cache-indicator.md  2026-05-22-events-filters-reuse-filterchips.md  2026-05-22-events-page-ui-tweaks.md  2026-05-22-redb-l2-cache.md  2026-05-23-coming-soon-card.md
docs/superpowers/specs/: 2026-05-22-arc-and-events-pages-design.md  2026-05-22-cache-diagnostic-design.md  2026-05-22-cache-indicator-design.md  2026-05-22-events-page-ui-tweaks-design.md  2026-05-22-redb-l2-cache-design.md  2026-05-23-coming-soon-card-design.md
src/: main.rs
src/components/: arc_card.rs  arcs_view.rs  cache_badge.rs  cache_diagnostic.rs  coming_soon.rs  dropdown.rs  event_card.rs  event_filters.rs  events_view.rs  filter_chips.rs  item_card.rs  items_view.rs  mod.rs  page_layout.rs  spinner.rs  toggle.rs  trader_item_card.rs  trader_view.rs
src/services/: bots.rs  db.rs  events.rs  httpclientbuilder.rs  items.rs  mod.rs  source.rs  traders.rs
src/state/: mod.rs  navbar.rs  theme.rs
src/views/: arcs.rs  events.rs  items.rs  map.rs  materials.rs  mod.rs  navbar.rs  raider.rs  settings.rs  traders.rs
